deploy/coordinator/environments/dev/kind-istio/destination-rules.yaml
# WARNING: Only use in testing scenarios
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ${EPP_NAME}-decode-insecure-tls
spec:
  host: ${EPP_NAME}-decode
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
---
# WARNING: Only use in testing scenarios
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: multimodal-endpoint-picker-insecure-tls
spec:
  host: multimodal-endpoint-picker
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
